* fix show ... when text too long in xuanxuan card

--- a/module/productplan/css/x.view.css
+++ b/module/productplan/css/x.view.css
@@ -7,7 +7,7 @@
 .tab-btn-container {width: 100%; background-color: #f2f2f2;}
 .tab-btn-container ul {padding-left: 200px;;}
 .tab-btn-container ul li {list-style: none;}
-.plan-title {position: absolute; top: 0; left: 0; padding: 8px 15px; font-weight: bolder; width: 200px;}
+.plan-title {position: absolute; top: 0; left: 0; padding: 8px 15px; font-weight: bolder; width: 200px; text-overflow: ellipsis; white-space: nowrap; overflow: hidden}
 .tab-btn-container ul li.active span {display: inline-block;}
 .linkButton {position: absolute; right: 0; top: 0; padding-right: 10px; cursor: pointer;}
 .linkButton i {font-size: 18px !important;}
